Added Flat UI colors on variables

--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+  <style>
+    .box h2 {
+      font-family: 'Raleway-black';
+      text-transform: uppercase;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
     <div class="box">
       <h1>Example box</h1>
+      <h2>Raleway-black</h2>
       <p>This domain is established to be used for illustrative examples in documents. You may use this
       domain in examples without prior coordination or asking for permission.</p>
       <p><a href="http://www.iana.org/domains/example" class="btn btn-success">More information...</a></p>
