Added Font Lato

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       font-family: 'Raleway-black';
       text-transform: uppercase;
     }
+    .box h3 {
+      font-family : 'Lato-thin';
+    }
   </style>
 </head>
 <body>
@@ -25,6 +28,7 @@
     <div class="box">
       <h1>Example box</h1>
       <h2>Raleway-black</h2>
+      <h3>Lato-Thin</h3>
       <p>This domain is established to be used for illustrative examples in documents. You may use this
       domain in examples without prior coordination or asking for permission.</p>
       <p><a href="http://www.iana.org/domains/example" class="btn btn-success">More information...</a></p>
